--- a/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
@@ -23,9 +23,10 @@
             <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
             <td>@Html.DisplayFor(modelItem => item.Dni)</td>
             <td>
-                @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })
+                @if (User.IsInRole("Administrador")){
+                 @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })} |
+                 @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+                 @Html.ActionLink("Detalles", "Details", new { id=item.Id})   
             </td>
         </tr>}
     </tbody>
