--- a/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
@@ -21,14 +21,15 @@
             <td>@Html.DisplayFor(modelItem => item.Nombre)</td>
             <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
             <td>@Html.DisplayFor(modelItem => item.Dni)</td>
-            <td>	           
-                @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Eliminar", "Delete", new {id=item.Id }) | 
-                @Html.ActionLink("Ver Inmueble", "VerInmueble", new {dni=item.Dni })
+            <td>
+                @if (User.IsInRole("Administrador")){
+                 @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })} |
+                 @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+                 @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
+                 @Html.ActionLink("Ver Inmueble", "VerInmueble", new {dni=item.Dni })
 		    </td>
         </tr>}
-     </tbody>
+    </tbody>
    </table>
   </div>
  </div>
