--- a/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
@@ -35,19 +35,16 @@
             <td style="display:none;">@Html.DisplayFor(modelItem => item.Propietario.Dni)</td>
             <td class="d-flex justify-content-center">
              <div class="btn-group" role="group">  
-                @if (User.IsInRole("Administrador"))
-                { 
-                 <a asp-action="Delete" asp-route-id="@item.Id" asp-ro class="btn btn-danger"><i class="fas fa-edit">Eliminar</i></a>} 
-                 <a asp-action="Edit" asp-route-id="@item.Id" asp-ro class="btn btn-warning"><i class="fas fa-edit">Editar</i></a>
-                 <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-dark"><i class="fas fa-edit">Detalles</i></a>
+                @if (User.IsInRole("Administrador")){ 
+                 <a asp-action="Delete" asp-route-id="@item.Id"  class="btn btn-outline-danger"><i class="fas fa-edit">Eliminar</i></a>} 
+                 <a asp-action="Edit" asp-route-id="@item.Id"  class="btn btn-outline-warning"><i class="fas fa-edit">Editar</i></a>
+                 <a asp-action="Details" asp-route-id="@item.Id"  class="btn btn-outline-info"><i class="fas fa-edit">Detalles</i></a>
 
-                @if (item.EstaPublicado == false)
-                {
-                    <a asp-action="Habilitar" asp-route-id="@item.Id" class="btn btn-primary"><i class="fas fa-minus-square"></i>Habilitar</a>                    
+                @if (item.EstaPublicado == false){
+                    <a asp-action="Habilitar" asp-route-id="@item.Id" class="btn btn-outline-primary"><i class="fas fa-minus-square"></i>Habilitar</a>                    
                 }
-                else
-                {
-                    <a asp-action="Deshabilitar" asp-route-id="@item.Id" class="btn btn-secondary"><i class="fas fa-minus-square"></i>Deshabilitar</a>                                  
+                else{
+                    <a asp-action="Deshabilitar" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="fas fa-minus-square"></i>Deshabilitar</a>                                  
                 }
              </div>
             </td>
