--- a/Inmobiliaria_2022/Views/Contratos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Index.cshtml
@@ -14,6 +14,22 @@
             <a class="btn btn-info" asp-action="Index" asp-route-id="4">Inmuebles disponibles</a>*@
         </div>
 
+        @* Vigentes Por Fechas *@
+                @*<form asp-controller="Contratos" asp-action="Index">
+                    <div class="form-group">
+                        <label for="fechas">Vigencia por fechas</label>
+                         <div class="input-group">
+                            <div class="input-group-prepend"><span class="input-group-text">Desde</span></div>
+                                <input type="text" name="vigencia" value="3" hidden>
+                                <input type="date" name="fechaIni" id="fechas" class="form-control" required>
+                                <div class="input-group-prepend"><span class="input-group-text">Hasta</span></div>
+                                <input type="date" name="fechaFin" class="form-control" required>
+                         </div>
+                          <small class="form-text text-muted">Introduzca un rango de fechas.</small>
+                    </div>
+                    <hr />
+                    <button class="btn btn-outline-primary w-100" type="submit">Buscar</button>
+                  </form>*@
 
 <table class="table">
     <thead>
