--- a/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
@@ -26,7 +26,7 @@
                  @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })} |
                  @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
                  @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
-                 @Html.ActionLink("Ver Inmueble", "VerInmueble", new {dni=item.Dni })
+                 @Html.ActionLink("Ver Inmueble", "VerInmueble", new {dni=item.Dni }) @*2-Listar los inmuebles que les correspondan a un propietario*@
 		    </td>
         </tr>}
     </tbody>
