--- a/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="card bg-light border border-primary">
     <div class="card-header border-bottom border-primary bg-light text-center"><h3>Inquilino</h3></div>
-    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a></div>
+    <div class="card-header border-bottom border-primary bg-light"><a class="btn btn-success text-white mr-2" asp-action="Create">Nuevo Inquilino</a></div>
     <div class="card-body"><h5 class="card-title text-primary">Listado de Inmuebles</h5>
   <table class="table">
     <thead>
