--- a/Inmobiliaria_2022/Views/Usuarios/CambiarAvatar.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/CambiarAvatar.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="card-header border-top border-primary bg-light">
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancelar</a>
             </div>
         </div>
