--- a/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
@@ -49,7 +49,7 @@
         <div class="card-header border-top border-primary bg-light">
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+                <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Volver al Listado</a>
            </div>
        </div>
   </form>
